# quickfind

./: CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: publish.yml
src/: config.rs  db.rs  lib.rs  main.rs  query.rs  tui.rs  watcher.rs
tests/: query_search_integration.rs  watcher_e2e.rs
