[package]
name = "quickfind"
version = "1.5.1"
edition = "2021"
description = "Search local files instantly with configurable, interactive CLI"
license = "MIT"
authors = ["Charly <github.womankind045@passinbox.com>"]
repository = "https://github.com/0xsecaas/quickfind"
readme = "README.md"
keywords = ["cli", "task-manager", "personal-development", "goal-tracker"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
crossterm = "0.29.0"
eyre = "0.6.12"
glob = "0.3.3"
home = "0.5.11"
opener = "0.8.3"
notify = "6.1.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
tui = "0.19.0"
walkdir = "2.5.0"
